ingress/myingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service-weights: |
      myapp: 90%
      myappcanary: 10%
  name: myappingress
  namespace: kube-system
spec:
  rules:
  - host: myapp.minikube
    http:
      paths:
      - backend:
          serviceName: myapp
          servicePort: 80
        path: /
      - backend:
          serviceName: myappcanary
          servicePort: 80
        path: /
